fixed scaling issues on desktop, still need to fix on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -6,24 +6,27 @@
   @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 }
 
+html{
+  @apply bg-gray-200 
+}
 h1 {
-  @apply mb-4 lg:text-4xl md:text-xl text-lg tracking-tight font-extrabold text-center text-black font-poppins
+  @apply text-[3.0em] tracking-tight font-extrabold text-center text-black font-poppins
 }
 
 h2 {
-  @apply mb-4 lg:text-3xl md:text-lg text-base tracking-tight font-extrabold text-center text-black font-poppins
+  @apply text-[2.4em] tracking-tight font-extrabold text-center text-black font-poppins
 }
 
 h3 {
-  @apply mb-4 lg:text-2xl md:text-base text-sm tracking-tight font-extrabold text-center text-black font-poppins
+  @apply text-[2.0em] tracking-tight font-extrabold text-center text-black font-poppins
 }
 
 h4 {
-  @apply mb-4 lg:text-xl md:text-sm text-xs tracking-tight font-extrabold text-center text-black font-poppins
+  @apply text-[1.6em] tracking-tight font-extrabold text-center text-black font-poppins
 }
 
 p {
-  @apply mb-4 lg:text-base md:text-sm text-xs font-medium font-poppins
+  @apply text-[100%] font-medium font-poppins
 }
 
 a, span, label, input, textarea, button {
